Remove box-shadow from form-control properly and fix search form-control on mobile

--- a/src/SumoCoders/FrameworkCoreBundle/Resources/assets/sass/components/_forms.scss
+++ b/src/SumoCoders/FrameworkCoreBundle/Resources/assets/sass/components/_forms.scss
@@ -79,7 +79,7 @@
 }
 
 .form-control {
-  box-shadow: 0;
+  box-shadow: none;
 
   &:focus {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
