--- a/src/SumoCoders/FrameworkCoreBundle/Resources/assets/sass/layouts/_search.scss
+++ b/src/SumoCoders/FrameworkCoreBundle/Resources/assets/sass/layouts/_search.scss
@@ -8,8 +8,8 @@
     z-index: 666;
 
     .form-control:focus {
-      margin-top: -45px;
       transition: all 600ms;
+      box-shadow: none;
     }
 
     .control-label {
@@ -24,13 +24,14 @@
       font-style: normal;
       font-weight: normal;
       height: 42px;
-      margin-top: 2px;
+      margin: 3px 0 4px 0;
       width: 85%;
+      box-shadow: none;
     }
 
     .controls .btn {
       background-color: $white;
-      padding: 8px 0;
+      padding: 10px 0;
       width: 15%;
     }
 
@@ -72,7 +73,7 @@
       .form-control {
         float: none;
         height: 50px;
-        margin-top: 0;
+        margin: 0;
         width: 100%;
       }
 
